# codeweave

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: alembic.ini  pyproject.toml
backend/skills/: README.md
backend/skills/codeweave-coder/: SKILL.md  pitfalls.md
backend/skills/codeweave-reviewer/: SKILL.md
backend/skills/codeweave-reviewer/examples/: bad-diff-example.py
backend/src/codeweave/: __init__.py
backend/src/codeweave/agents/: __init__.py  _coder_diff.py  _coder_prompts.py  _compact_check.py  _reviewer_prompts.py  coder.py  compact.py  executor.py  explorer.py  reviewer.py  supervisor.py
backend/src/codeweave/api/: README.md  __init__.py  deps.py  errors.py  main.py  sse.py
backend/src/codeweave/api/models/: __init__.py  common.py  cost.py  threads.py
backend/src/codeweave/api/routers/: __init__.py  code_mod.py  health.py  messages.py  queries.py
backend/src/codeweave/config/: __init__.py  model.py  settings.py
backend/src/codeweave/db/: __init__.py  base.py  models.py
backend/src/codeweave/db/migrations/: env.py  script.py.mako
backend/src/codeweave/db/migrations/versions/: 0001_init_audit_compact_token.py
backend/src/codeweave/graphs/: __init__.py  coder_review_graph.py  execute_graph.py  plan_graph.py  root.py
backend/src/codeweave/persistence/: __init__.py  audit.py  checkpointer.py  store.py
backend/src/codeweave/prompts/: __init__.py  compact.jinja
backend/src/codeweave/services/: __init__.py  compact_logic.py  token_tracker.py
backend/src/codeweave/skills/: __init__.py  loader.py  schemas.py  security.py  state.py
backend/src/codeweave/state/: __init__.py  reducers.py  schemas.py
backend/src/codeweave/tasks/: __init__.py  _compat.py  _llm.py  celery_app.py  cleanup.py  compact.py  token_aggregate.py
backend/src/codeweave/tools/: __init__.py  bash_tools.py  file_tools.py  registry.py  todo_tools.py
backend/tests/: conftest.py
backend/tests/agents/: __init__.py  test_coder.py  test_reviewer.py
backend/tests/api/: __init__.py  conftest.py  test_code_mod_simple.py  test_error_body.py  test_health.py  test_hitl.py  test_messages_simple.py  test_models_threads.py  test_openapi.py  test_queries.py  test_sse_format.py  test_trace_id.py
backend/tests/graphs/: __init__.py  test_coder_review_graph.py
backend/tests/integration/: README.md  test_api_real_llm.py  test_audit_replay.py  test_celery_worker_roundtrip.py  test_compact_e2e.py  test_compact_graph_topology.py  test_compact_race.py  test_compact_real_llm.py  test_executor_with_tools.py  test_real_llm_code_mod.py  test_root_graph.py
backend/tests/skills/: test_loader.py  test_schemas.py  test_security.py
backend/tests/unit/: test_aggregate_token.py  test_audit_integration.py  test_audit_logger.py  test_bash_tools.py  test_compact_check.py  test_compact_logic.py  test_compact_task.py  test_db_models.py  test_execute_graph.py  test_file_tools.py  test_model.py  test_reducers.py  test_registry.py  test_schemas.py  test_settings.py  test_store.py  test_supervisor.py  test_todo_tools.py  test_token_tracker.py
cli/: pyproject.toml
