[project]
name = "codeweave"
version = "0.1.0"
description = "CodeWeave backend - LangGraph agent + FastAPI"
requires-python = ">=3.12"
dependencies = [
    "langgraph==1.2.8",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain==1.3.11",
    "langchain-mcp-adapters>=0.1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "redis>=5.2",
    "celery[redis]>=5.4",
    "httpx>=0.27",
    "jinja2>=3.1",
    "tiktoken>=0.8",
    "langchain-openai>=1.3.3",
    "alembic>=1.18.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codeweave"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
# Alembic 不发布类型 stub,API 表面积比较小,忽略缺失导入比维护类型更稳。
[[tool.mypy.overrides]]
module = "alembic.*"
ignore_missing_imports = true

# SQLAlchemy 的 dialects.postgresql 子模块也没有完整类型 stub;Alembic 的
# migration 里会用到 JSONB / UUID 等,通过覆盖配合 ignore_missing_imports 即可。
[[tool.mypy.overrides]]
module = "sqlalchemy.dialects.postgresql"
ignore_missing_imports = true

# Alembic migration 文件是运行时生成的胶水代码,函数体内大量调用 SQLAlchemy
# dialect 内未标注的工厂(JSONB / UUID 等),逐个 cast 不划算。
[[tool.mypy.overrides]]
module = "codeweave.db.migrations.versions.*"
disallow_untyped_calls = false

# 既有基线错误:config/settings.py:72 — get_settings() 调 Settings() 时未传
# 必填的 openai_api_key,Task 17 处理。这里放宽让 strict 跑通。
[[tool.mypy.overrides]]
module = "codeweave.config.settings"
disallow_untyped_calls = false

# Celery 5.x 不发 py.typed,@app.task 装饰器也无类型,索性把 Celery 模块
# 全标记为缺类型,与 alembic 同等待遇。
[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

# LangGraph 的 PostgresSaver 也未在 .pyi 中标注 get_state / setup,这里
# 关闭缺失导入检查,业务代码需要再单独 cast 或 type: ignore。
[[tool.mypy.overrides]]
module = "langgraph.checkpoint.postgres"
ignore_missing_imports = true
