[project]
name = "cw"
version = "0.1.0"
description = "CodeWeave CLI client"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "rich>=13.9",
    "prompt-toolkit>=3.0",
]

[project.scripts]
cw = "cw.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cw"]
